finish rating, fix height scrollbar

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -157,6 +157,7 @@
   &::-webkit-scrollbar {
     background-color: transparent;
     width: 7px;
+    height: 5px;
   }
 
   &::-webkit-scrollbar-thumb {
