--- a/src/entities/Product/ui/AtSupplierCard/ui/list/_ProductASCList.module.scss
+++ b/src/entities/Product/ui/AtSupplierCard/ui/list/_ProductASCList.module.scss
@@ -3,7 +3,7 @@
     gap: 15px;
     overflow-x: auto;
     max-width: 600px;
-    margin-bottom: 29px;
+    
     @media (width < 1280px) {
         max-width: 540px;
         margin-bottom: 0px;
