--- a/src/shared/ui/Rating/ui/_Rating.module.scss
+++ b/src/shared/ui/Rating/ui/_Rating.module.scss
@@ -1,5 +1,7 @@
 .Rating{
     display: flex;
+    align-items: center;
+    gap: 7px;
 }
 
 .link{
